# physical-ai-bench

./: .gitignore  LICENSE  README.md
predict/: README.md  evaluate.py  evaluate_vqa.py  pyproject.toml
predict/pbench/: __init__.py  overall_consistency.py  vqa_evaluation.py
reason/: README.md  models.py  pyproject.toml  run.py
transfer/: README.md  compute_diversity_score.py  compute_metrics.py  get_checkpoint.sh  pyproject.toml
transfer/benchmark_pipelines/scores/transfer_bench/: utils.py
transfer/utils/: model_utils.py
